--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,16 @@
   --red: #dc0a17;
   --green: #2FC022;
 }
+* {
+  font-family: 'Gotham';
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body {
+  width: 100%;
+  height: 100%;
+}
 
 @font-face {
   font-family: 'Gotham';
